# project-voxels-v2

./: Cargo.toml  README.md  rustfmt.toml
benchmarks/: benchmark.rs
src/: camera.rs  engine_loop.rs  gui.rs  input.rs  lib.rs  main.rs  state.rs  window_loop.rs
src/renderer/: adapter_builder.rs  buffer_builder.rs  command_encoder_builder.rs  containers.rs  device_builder.rs  instance_builder.rs  mod.rs  pipeline_builder.rs  surface_builder.rs
src/shaders/: shader.wgsl
