[package]
name = "project-voxels-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
glam = "0.27.0"
log = "0.4.21"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
wgpu = "0.19.3"
winit = "0.29.15"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "benchmarks/benchmark.rs"
harness = false
